clusters/vollminlab-cluster/mediastack/jellyfin/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: mediastack
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    shlink.vollminlab.com/slug: jellyfin
  labels:
    app: jellyfin
    env: production
    category: media
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.vollminlab.com
      secretName: wildcard-tls
